2004-06-13  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* rtai-core/include/rtai_posix.h (pthread_rwlock_open_rt): Make depend on
	-D__USE_UNIX98.

	* rtai-core/include/rtai_posix.h: Include <stdlib.h> in user-space
	to satisfy references to malloc()/free().

2004-06-09  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/ipc/fifos/fifos.c: Export rtf_named_create().

2004-06-05  Philippe Gerum  <rpm@xenomai.org>

	* Move to GNA (http://www.gna.org/projects/rtai/).

2004-06-04  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/mutex.c: Add blinking warning about
	kernel mutex support being deprecated in newer versions of the
	Xenomai nanokernel.

	* rtai-core/sched/xenomai/shadow.c (xnshadow_linux_sysexit):
	Always propagate sysexits whenever a signal is pending for the
	current task.

2004-05-29  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/intr.c: Add blinking warning about IST
	support being deprecated in newer versions of the Xenomai
	nanokernel.

2004-05-28  Peter Soetens <peter.soetens@mech.kuleuven.ac.be>
	
	* rtai-core/include/rtai_posix.h: Added patch of Jan Kitszka
	to allow pthread_join_rt in kernel and rtai context
	
2004-05-27  Peter Soetens <peter.soetens@mech.kuleuven.ac.be>
	
	* rtai-core/include/rtai_posix.h: Fix sem, mutex and rwlock not
	being deleted.
	
2004-05-08  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Refuse to generate doxygen documentation with
	version prior to 1.3.4.

	* rtai-core/scripts/bootstrap: Force the version of aclocal and
	automake to 1.7 in order to avoid problems when several versions
	of automake are installed.

	* rtai-core/include/rtai_lxrt.h: Copied some missing definitions
	from linux/module.h to compile rt_lxrt_loaded().

2004-04-30  Peter Soetens <peter.soetens@mech.kuleuven.ac.be>

	* configure.in, rtai-core/include/rtai_registry.h: Allow
	configuring the maximum number of LXRT slots.
